[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/GameOver.gd" type="Script" id=2]
[ext_resource path="res://sfx/soul_severed.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/victory.ogg" type="AudioStream" id=4]
[ext_resource path="res://manager/SFXmanager.tscn" type="PackedScene" id=5]
[ext_resource path="res://sfx/text_slam.wav" type="AudioStream" id=6]
[ext_resource path="res://manager/PressSFXmanager.tscn" type="PackedScene" id=7]
[ext_resource path="res://manager/HoverSFXmanager.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "game_over_screen"
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "show_player_wealth"
}, {
"args": [  ],
"method": "show_needed_wealth"
}, {
"args": [  ],
"method": "show_result"
} ]
}

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 384.0
margin_top = 120.0
margin_right = 635.0
margin_bottom = 168.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_right = 251.0
margin_bottom = 48.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 247.0
margin_bottom = 44.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_right = 243.0
margin_bottom = 40.0

[node name="PlayerWealth" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 243.0
margin_bottom = 18.0
text = "Your wealth is valued at "
align = 1

[node name="NeededWealth" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 243.0
margin_bottom = 40.0
text = "You needed to gather "
align = 1

[node name="SoulSeveredLabel" type="Label" parent="."]
visible = false
margin_left = 24.0
margin_top = 192.0
margin_right = 149.0
margin_bottom = 210.0
rect_scale = Vector2( 8, 8 )
theme = ExtResource( 1 )
text = "SOUL SEVERED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoulReclaimedLabel" type="Label" parent="."]
visible = false
margin_left = 24.0
margin_top = 192.0
margin_right = 149.0
margin_bottom = 210.0
rect_scale = Vector2( 7, 8 )
theme = ExtResource( 1 )
text = "SOUL Reclaimed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 464.0
margin_top = 384.0
margin_right = 568.0
margin_bottom = 424.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2"]
margin_right = 104.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 100.0
margin_bottom = 36.0

[node name="TryAgainButton" type="Button" parent="MarginContainer2/PanelContainer/MarginContainer"]
margin_right = 96.0
margin_bottom = 32.0
text = "Try again"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_over_screen = SubResource( 1 )

[node name="LossSFXmanager" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LossSFXmanager"]
stream = ExtResource( 3 )

[node name="WinSFXmanager" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="WinSFXmanager"]
stream = ExtResource( 4 )

[node name="TextSlamSFXmanager" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TextSlamSFXmanager"]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="TextSlamSFXmanager"]
stream = ExtResource( 6 )

[node name="HoverSFX" parent="." instance=ExtResource( 8 )]

[node name="PressSFX" parent="." instance=ExtResource( 7 )]
[connection signal="mouse_entered" from="MarginContainer2/PanelContainer/MarginContainer/TryAgainButton" to="." method="_on_TryAgainButton_mouse_entered"]
[connection signal="pressed" from="MarginContainer2/PanelContainer/MarginContainer/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
